--- a/A0/Assignment_0_Task2.ipynb
+++ b/A0/Assignment_0_Task2.ipynb
@@ -5,7 +5,12 @@
    "id": "90596e73",
    "metadata": {},
    "source": [
-    "### Task 2"
+    "Basic Information\n",
+    "- Sophie Sun\n",
+    "- Student ID: S01400873 \n",
+    "- netID:ys97\n",
+    "\n",
+    "### Task 2\n"
    ]
   },
   {
