--- a/A0/Assignment_0_Task3-5.ipynb
+++ b/A0/Assignment_0_Task3-5.ipynb
@@ -4,6 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Basic Information\n",
+    "- Sophie Sun\n",
+    "- Student ID: S01400873 \n",
+    "- netID:ys97 \n",
+    "\n",
     "### Task 3: \n",
     "Run the following script in IPython and paste the fifigure created by the script into your report."
    ]
