--- a/A0/Assignment_0_Task3-5.ipynb
+++ b/A0/Assignment_0_Task3-5.ipynb
@@ -4,18 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic Information\n",
-    "- Sophie Sun\n",
-    "- Student ID: S01400873 \n",
-    "- netID:ys97 \n",
-    "\n",
     "### Task 3: \n",
     "Run the following script in IPython and paste the fifigure created by the script into your report."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.plot([1,2,3,4], [1,2,7,14])\n",
     "plt.axis([0, 6, 0, 20])\n",
+    "plt.savefig('pic1.png')\n",
     "plt.show()"
    ]
   },
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +65,7 @@
     "import numpy as np\n",
     "t = np.arange(0.0,10.0,0.2)\n",
     "plt.plot(np.sin(2*np.pi*t))\n",
+    "plt.savefig('pic2.png')\n",
     "plt.show()"
    ]
   },
